--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,12 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.th.flutter_mob
-    pluginClass: FlutterMobTPlugin
+    platforms:
+      android:
+        package: com.th.flutter_mob
+        pluginClass: FlutterMobTPlugin
+      ios:
+        pluginClass: FlutterMobTPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
