--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: flutter_mob_t
+name: flutter_mob
 description: A new Flutter plugin.
 version: 0.0.1
-author: tanhuang
-homepage: https://github.com/tanhuang/flutter_mob_t
+author: tan
+homepage: https://github.com/tanhuang/flutter_mob
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -25,13 +25,15 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
+    # androidPackage: com.ly.flutter_mob
+    # pluginClass: FlutterMobPlugin
+
     platforms:
       android:
-        package: com.th.flutter_mob
-        pluginClass: FlutterMobTPlugin
+        package: com.ly.flutter_mob
+        pluginClass: FlutterMobPlugin
       ios:
-        pluginClass: FlutterMobTPlugin
-
+        pluginClass: FlutterMobPlugin
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
