--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,7 +17,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_mob:
+  flutter_mob_t:
     path: ../
 
 # For information on the generic Dart part of this file, see the
