--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
-name: flutter_mob
+name: flutter_mob_t
 description: A new Flutter plugin.
 version: 0.0.1
-author: tan
 homepage: https://github.com/tanhuang/flutter_mob
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.12.0"
+  
 
 dependencies:
   flutter:
@@ -25,15 +26,15 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    # androidPackage: com.ly.flutter_mob
-    # pluginClass: FlutterMobPlugin
+    # androidPackage: com.ly.flutter_mob_t
+    # pluginClass: FlutterMobTPlugin
 
     platforms:
       android:
-        package: com.ly.flutter_mob
-        pluginClass: FlutterMobPlugin
+        package: com.ly.flutter_mob_t
+        pluginClass: FlutterMobTPlugin
       ios:
-        pluginClass: FlutterMobPlugin
+        pluginClass: FlutterMobTPlugin
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
